--- a/Movie_Performance_Analysis.ipynb
+++ b/Movie_Performance_Analysis.ipynb
@@ -9,7 +9,7 @@
     "Please fill out:\n",
     "* Student name: guy muchnick \n",
     "* Student pace: self paced\n",
-    "* Scheduled project review date/time: \n",
+    "* Scheduled project review date/time: 2/4/22 4:00 pm\n",
     "* Instructor name: Abhineet Kulkarni\n",
     "* Blog post URL:https://medium.com/@guymu15/sql-and-pandas-complimenting-tools-for-data-manipulation-3851e7e9c87b\n"
    ]
